sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:14: error: Boolean does not take parameters
        echange(j, j+1)
               ^